--- a/src/src/main/resources/templates/TASK_REMINDER.html
+++ b/src/src/main/resources/templates/TASK_REMINDER.html
@@ -42,7 +42,8 @@
                 <tr>
                     <td align="center" style="height: 60px !important;">
                         <a style="text-decoration: none!important; border: 1px solid #98A8F8!important; border-radius: 5px!important; background-color: #98A8F8!important; font-size: 25px!important; color: white!important; padding: 10px 15px!important; cursor: pointer!important;"
-                           th:href="@{https://web-nang-cao-19-3-ymeb.vercel.app/task(taskId=${id})}">Mở
+                           th:with="taskUrl=(${frontendUrl} + '/send-link/task')"
+                           th:href="@{${taskUrl}(taskId=${id})}">Mở
                             công việc</a>
                     </td>
                 </tr>
